can't do unnamed parts yet.

--- a/plink.yml
+++ b/plink.yml
@@ -34,14 +34,18 @@ assemblies:
 
   - type: "Main Structure"
     parts:
+      # XXX unnamed parts are not supported yet
       # you can also just omit the name: and list strings. Same as doing:
       #
       # - name: "foo"
       #   part: "foo"
       #
-      - "Top Plate"
-      - "Bulkhead"
+      #- "Top Plate"
+      #- "Bulkhead"
+      - name: "Top Plate"
+      - name: "Bulkhead"
 
+      
 # this is where object can be purchased from these could be loaded in
 # from the system bom as well... but that file is a mess and in
 # another repo so going to figure that out later.
